--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/test-utils": "^2.4.5",
     "jsdom": "^24.0.0",
     "nuxt": "^3.11.2",
+    "pinia": "^2.1.7",
     "vitest": "^1.5.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
